--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ hr {
 }
 
 .RSVPBut {
-    background-color: #eddecf; /* Green */
+    background-color: #eddecf; 
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -102,8 +102,9 @@ hr {
 }
 
 body { font-family: Arial, sans-serif; margin: 20px; }
-form { max-width: 500px; margin: 0 auto; padding: 20px; border: 1px solid #ccc; border-radius: 8px; }
-label { display: block; margin-bottom: 8px; font-weight: bold; }
+form { max-width: 500px; margin: 0 auto; padding: 20px; border-radius: 8px; }
+label { display: inline-block; margin-bottom: 8px; font-weight: bold; }
+sub_label { display: inline-block; margin-bottom: 8px; }
 input[type="text"],
 input[type="email"],
 textarea {
