--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
+@font-face { 
+  font-family: 'Eyesome Script'; 
+  src: url('fonts/Eyesome-Script.otf') format('opentype'); 
+}
+
+@font-face { 
+  font-family: 'Source Serif 4'; 
+  src: url('fonts/Source-Serif-4.ttf') format('opentype'); 
+}
+
 body, html {
-    background-color:  #eddecf;
+    background-color:  #F8ebdf;
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 0;
 }
 
 .container {
@@ -12,19 +22,34 @@ body, html {
   height: 100%;
 }
 
+.titleimage {
+  position: fixed; 
+  bottom: 0; 
+  left: 50%; 
+  transform: translateX(-50%); 
+  opacity: 50%;
+  width: 100%; /* optional */
+  z-index: -1;
+}
+
 h1 {
-    font-family: "Brush Script MT", cursive;
-    font-size: 50px;
+    font-family: 'Eyesome Script';
+    font-size: 80px;
     color: black;
     text-align: center;
 }
 
 h2 {
+    font-family: 'Source Serif 4';
     color: black;
     text-align: center;
     text-shadow: 1px 1px;
     padding-left: 30px;
     padding-right: 30px;
+}
+
+p {
+  font-family: 'Source Serif 4'; 
 }
 
 hr {
@@ -73,6 +98,10 @@ hr {
     opacity: 0.8;
 }
 
+input[type="submit"] { 
+  background-color: #eddecf; 
+}
+
 /* Style the buttons that are used to open the tab content */
 .tab button {
   background-color: inherit;
@@ -98,7 +127,7 @@ hr {
 .tabcontent {
   padding: 6px 12px;
   border-top: none;
-    text-align: center;
+  text-align: center;
 }
 
 body { font-family: Arial, sans-serif; margin: 20px; }
@@ -115,18 +144,7 @@ textarea {
     border-radius: 4px;
     box-sizing: border-box; /* Ensures padding doesn't increase width */
 }
-input[type="submit"] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-}
-input[type="submit"]:hover {
-    background-color: #45a049;
-}
+
 .error-message {
     color: red;
     margin-top: -10px;
@@ -136,5 +154,7 @@ input[type="submit"]:hover {
     color: green;
     margin-bottom: 10px;
 }
+
+
 
 
